--- a/debtsTracker/debtsTracker/debtsTracker.csproj
+++ b/debtsTracker/debtsTracker/debtsTracker.csproj
@@ -131,6 +131,13 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_add_black_24dp.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_remove_black_24dp.png" />
     <AndroidResource Include="Resources\layout\history_item.axml" />
+    <AndroidResource Include="Resources\layout\add_transaction.axml" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_account_plus_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_account_plus_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_account_plus_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_account_plus_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_account_plus_black_24dp.png" />
+    <AndroidResource Include="Resources\layout\history.axml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
