--- a/debtsTracker/debtsTracker/debtsTracker.csproj
+++ b/debtsTracker/debtsTracker/debtsTracker.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Managers\DebtsManager.cs" />
     <Compile Include="Managers\StorageManager.cs" />
     <Compile Include="Managers\DroidLocalStorage.cs" />
+    <Compile Include="Managers\InterfaceUpdateManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
