plus button on debt item

--- a/debtsTracker/debtsTracker/debtsTracker.csproj
+++ b/debtsTracker/debtsTracker/debtsTracker.csproj
@@ -234,6 +234,11 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_thumb_up_black_24dp.png" />
     <AndroidResource Include="Resources\anim\anim_shake.axml" />
     <AndroidResource Include="Resources\anim\cycle_7.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_add_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_add_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_add_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_add_black_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_add_black_24dp.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
