--- a/debtsTracker/debtsTracker/debtsTracker.csproj
+++ b/debtsTracker/debtsTracker/debtsTracker.csproj
@@ -260,6 +260,10 @@
     <AndroidResource Include="Resources\drawable-xxxhdpi\ic_done_white_24dp.png" />
     <AndroidResource Include="Resources\layout\add_transaction.axml" />
     <AndroidResource Include="Resources\drawable-mdpi\screen.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\screen.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\screen.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\screen.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\screen.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
