--- a/debtsTracker/debtsTracker/debtsTracker.csproj
+++ b/debtsTracker/debtsTracker/debtsTracker.csproj
@@ -264,6 +264,16 @@
     <AndroidResource Include="Resources\drawable-xhdpi\screen.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\screen.png" />
     <AndroidResource Include="Resources\drawable-xxxhdpi\screen.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_remove_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ic_mode_edit_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_remove_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-mdpi\ic_mode_edit_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_remove_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ic_mode_edit_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_remove_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ic_mode_edit_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_remove_white_24dp.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\ic_mode_edit_white_24dp.png" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
