--- a/debtsTracker/debtsTracker/Properties/AndroidManifest.xml
+++ b/debtsTracker/debtsTracker/Properties/AndroidManifest.xml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="ru.peppercrazy.debtstracker">
-    <uses-sdk android:minSdkVersion="16" />
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.1" package="ru.peppercrazy.debtstracker">
+	<uses-sdk android:minSdkVersion="16" />
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="com.android.vending.BILLING" />
-    <application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@style/MyTheme">
-    </application>
+	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@style/MyTheme"></application>
 </manifest>
