--- a/debtsTracker/debtsTracker/Properties/AndroidManifest.xml
+++ b/debtsTracker/debtsTracker/Properties/AndroidManifest.xml
@@ -1,14 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="ru.peppercrazy.debtstracker" android:versionCode="2">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="ru.peppercrazy.debtstracker" android:versionCode="3">
 	<uses-sdk android:minSdkVersion="16" />
 	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="com.android.vending.BILLING" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="com.android.vending.BILLING" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<application android:allowBackup="true" android:icon="@mipmap/icon" android:label="@string/app_name" android:theme="@style/MyTheme">
-        <activity android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:theme="@android:style/Theme.Translucent" />
+		<activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
+		<meta-data android:name="io.fabric.ApiKey" android:value="d47c40ae7f8ae5ef15505b369e03162d2b40980e" />
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 	</application>
-
 </manifest>
