--- a/debtsTracker/debtsTracker/packages.config
+++ b/debtsTracker/debtsTracker/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Aliencube.Autofac.Extras.CommonServiceLocator" version="4.0.1" targetFramework="monoandroid71" />
   <package id="Aliencube.CommonServiceLocator" version="1.3.1" targetFramework="monoandroid71" />
+  <package id="Answers" version="1.4" targetFramework="monoandroid71" />
   <package id="Autofac" version="4.6.1" targetFramework="monoandroid71" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid71" />
+  <package id="Crashlytics" version="1.4" targetFramework="monoandroid71" />
+  <package id="Fabric" version="1.4" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
